# CutHandler

./: .gitignore  README.md  install-CutHandler.bat  install-CutHandler.sh  pyproject.toml
src/: clipper.py  clipper_main.py  config_validator.py  main.py  parse_custom_naming_strings.py  xml_main.py  xmler.py
src/cuthandler/: __init__py  clipper.py  clipper_main.py  config_validator.py  parse_custom_naming_strings.py  xmler.py
